<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SplashScreen">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/saturn"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="35sp"
        android:letterSpacing="0.1"/>
    <View
        android:layout_width="60dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#03A9F4"
        android:orientation="vertical" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_explore"
        android:layout_marginTop="18dp"
        android:letterSpacing="0.2"
        android:gravity="center"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="25sp"
        android:layout_marginHorizontal="30dp"
        android:textColor="#DDDBDB"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_booking"
        android:layout_marginTop="25dp"
        android:letterSpacing="0.2"
        android:gravity="center"
        android:fontFamily="@font/poppins_regular"
        android:textSize="20sp"
        android:textColor="#DDDBDB"/>
</LinearLayout>