<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"

    tools:context=".FinalActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#5C5493"
        app:cardCornerRadius="15dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        app:cardElevation="5dp"
        android:layout_marginHorizontal="10dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:elevation="40dp"
                android:src="@drawable/earth" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/ohhhhh"
                android:textColor="@color/red"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/final_serviceMsg"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/final_worry"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/final_elon"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>