<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".PlanetDetails">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_info"
        android:adjustViewBounds="true"
        android:scaleY="1.2"
        android:scaleX="1.2"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="-50dp">
        <ImageView
            android:id="@+id/planetInfo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:elevation="40dp"
            android:src="@drawable/earth"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="-50dp"
            android:backgroundTint="@color/secondary"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="60dp">
                <TextView
                    android:id="@+id/title_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/earth"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/galaxy_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/milkyway_galaxy"
                    android:textColor="@color/subtext"
                    android:textSize="14sp" />
                <View
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#03A9F4"
                    android:orientation="vertical" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_distance"/>
                    <TextView
                        android:id="@+id/distance_info"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/_54_6km"
                        android:textSize="14sp"
                        android:textColor="@color/subtext"/>
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_gravity"
                        />
                    <TextView
                        android:id="@+id/gravity_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/_3_311_m_ss"
                        android:textSize="14sp"
                        android:textColor="@color/subtext"/>


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:padding="14dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/overview"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:letterSpacing="0.15"/>
                <View
                    android:layout_width="30dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="#03A9F4"
                    android:orientation="vertical" />
                <TextView
                    android:id="@+id/overView_Info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:letterSpacing="0.1"
                    android:lineSpacingExtra="1dp"
                    android:text="@string/EarthDesc"
                    android:textColor="@color/subtext"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/knowMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/know_more"
                    android:textColor="#DDDBDB"
                    android:layout_gravity="end"
                    android:layout_marginTop="15dp"

                    android:textSize="15sp" />
                <View
                    android:layout_width="70dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="#03A9F4"
                    android:orientation="vertical"
                    android:layout_gravity="end"
                    android:layout_marginEnd="25dp"/>

            </LinearLayout>



        </ScrollView>
        <TextView
            android:id="@+id/button_info"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="60dp"
            android:background="@drawable/bg_footer"
            android:elevation="10dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/book_your_ride"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>